12/11/12 integrate prototype dialog
12/11/12 cache the part of the compass that doesn't change, to improve performance.
12/11/12 cache the field inside the magnet to improve performance
12/11/12 make Options button yellow
12/11/12 move Options button a tad to the right
12/11/12 move frame rate display to upper-left corner of stage
12/11/12 on browser window resize: resize canvas to fill window, move origin to center of canvas, update field visualization to fill canvas
12/11/12 i18n of title
12/10/12 comment out a log warning that was tanking performance
12/10/12 migrate Property to common
12/10/12 migrate Point2D to common before migrating things that have it as a dependency
12/10/12 migrate types to common that have no dependencies
12/10/12 revert move of DragHandler, things are screwed up
12/10/12 move DragHandler to easel-phet
12/10/12 rename templates/ -> html/
12/10/12 rename app/ -> js/
12/10/12 rename faraday.html -> index.html
12/10/12 rename faraday-config.js -> config.js
12/10/12 rename faraday-main.js -> main.js
12/8/12 rename faraday-html to faraday
12/8/12 standardize format of requirejs "imports"
12/8/12 oldValue=null on initial notification of Property
12/8/12 add notification-on-registration to Property, modify use sites
12/6/12 make Options button larger
12/6/12 hide the "Options" button when pressed, show when popup closes
12/4/12 fix bug in alpha computation for b-field visualization
12/4/12 tune compass kinematics for dipole model
12/4/12 implement dipole model for bar magnet (ported from DipoleMagnet.java, circa 7/16/2010)
12/4/12 add Vector2D.plus and rotate
12/4/12 add Point2D.distance
# 0.00.01 (70955) Dec 4, 2012
12/4/12 change canvas size and Option button placement to look better on ipad
12/3/12 add some more space below strength slider
12/3/12 specify options panel title by id instead of class in css
12/3/12 consolidate a bit of css
12/3/12 move Options button up a bit, so that it's covered by overlay popup