@@ -1,3 +1,4 @@
+12/11/12 migrate ModelViewTransform2D and DragHandler to common
 12/11/12 integrate prototype dialog
 12/11/12 cache the part of the compass that doesn't change, to improve performance.
 12/11/12 cache the field inside the magnet to improve performance
